crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__yield_from__starred_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/yield_from/starred_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..100,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 70..83,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: NodeIndex(None),
                            range: 70..83,
                            value: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 81..83,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 82..83,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 84..100,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: NodeIndex(None),
                            range: 84..100,
                            value: Tuple(
                                ExprTuple {
                                    node_index: NodeIndex(None),
                                    range: 95..100,
                                    elts: [
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 95..97,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 96..97,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 99..100,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                    runtime_elts: None,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | # Yield from doesn't allow top-level starred expression unlike yield
2 |
3 | yield from *x
  |            ^^ Syntax Error: invalid syntax
4 | yield from *x, y
  |


  |
3 | yield from *x
4 | yield from *x, y
  |            ^^ Syntax Error: invalid syntax
