crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__yield_from__unparenthesized.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/yield_from/unparenthesized.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..192,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 35..47,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: NodeIndex(None),
                            range: 35..47,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 46..47,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 51..52,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 51..52,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 89..104,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: NodeIndex(None),
                            range: 89..104,
                            value: Tuple(
                                ExprTuple {
                                    node_index: NodeIndex(None),
                                    range: 100..104,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 100..101,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 103..104,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                    runtime_elts: None,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 168..192,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: NodeIndex(None),
                            range: 168..192,
                            value: Tuple(
                                ExprTuple {
                                    node_index: NodeIndex(None),
                                    range: 179..192,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 180..181,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 183..191,
                                                value: BoolOp(
                                                    ExprBoolOp {
                                                        node_index: NodeIndex(None),
                                                        range: 184..191,
                                                        op: And,
                                                        values: [
                                                            Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 184..185,
                                                                    id: Name("x"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 190..191,
                                                                    id: Name("y"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                        ],
                                                        runtime_values: None,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                    runtime_elts: None,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | # Unparenthesized named expression
2 | yield from x := 1
  |              ^^ Syntax Error: Expected a statement
3 |
4 | # Unparenthesized tuple expression
  |


  |
4 | # Unparenthesized tuple expression
5 | yield from x, y
  |            ^^^^ Syntax Error: Unparenthesized tuple expression cannot be used here
6 |
7 | # This is a tuple expression parsing
  |


  |
7 | # This is a tuple expression parsing
8 | #          vvvvvvvvvvvvv
9 | yield from (x, *x and y)
  |                 ^^^^^^^ Syntax Error: Boolean expression cannot be used here
